[RM] Support #56337. Configure environment deploy for End-to-end test execution
Change-Id: I887c1a6c21fd9124bd15fcdedec7a2b6f6bc5602